2006-01-10  Andreas Kupries <andreask@activestate.com>

	* htmlparse.test: Fixed [SF Tcllib Bug 1316049]. Uncluttering test
	  output.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-06  Andreas Kupries <andreask@activestate.com>

	* htmlparse.test: Reworked to use all available implementations of
	  struct::tree. Moved all tests using it into a separate file.

	* htmlparse.tree_testsuite: New file. Now contains all the tests
	  using struct::tree.

2005-01-11  Andreas Kupries <andreask@activestate.com>

	* htmlparse.tcl: Modified to load only the data structure we need,
	  stacks, and not all eleven. This fixes the Tcllib SF Bug
	  1087173, reported by Don Porter <dgp@users.sourceforge.net>.

	* htmlparse.test: Ensured usage of local packages, nothing
	  installed, and updated for the new struct usage. Updated to
	  fixes in cmdline.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-10-04  Andreas Kupries <andreask@activestate.com>

	* htmlparse.tcl (::htmlparse::PrepareHtml): Refixed the [Tcllib SF
	* htmlparse.test: Bug 861277]. This came back because of the
	  changes to entity processing for [Tcllib SF Bug 1018574]. We are
	  now using standard numeric entities to protect these special
	  characters, instead of nonstandard entities. Extended the test
	  suite to cover this. Thanks to Joe English for the catch.

2004-10-04  Joe English  <jenglish@users.sourceforge.net>

	* htmlparse.tcl(DoDecMap): Make sure numeric character references 
	  are interpreted as decimal (Bug #1039961).
	* htmlparse.test: Added test case.

2004-09-29  Andreas Kupries <andreask@activestate.com>

	* htmlparse.test: Fixed [Tcllib SF Bug 1034580], see also
 	* htmlparse.tcl:  [Tcllib SF Bug 900041]. Thanks to Georgios
 	  Petasis <petasis@users.sourceforge.net> for the report and