@@ -11,7 +11,12 @@ test htmlparse-${impl}-5.0 {conversion to tree} {
     }
     t destroy
     set tx
-} {{0 root} {1 hmstart} {2 html} {3 head} {4 title} {5 PCDATA} {4 meta} {3 body} {4 h2} {5 PCDATA} {5 p} {6 b} {7 PCDATA} {5 p} {6 form} {7 input}}
+} [list \
+	{0 root} {1 hmstart} {2 html} {3 head} \
+	{4 title} {5 PCDATA} {4 meta} {3 body} \
+	{4 h2} {5 PCDATA} \
+	{4 p} {5 b} {6 PCDATA} \
+	{4 p} {5 form} {6 input}]
 
 test htmlparse-${impl}-5.1 {conversion to tree} {
     struct::tree t
@@ -24,7 +29,11 @@ test htmlparse-${impl}-5.1 {conversion to tree} {
     }
     t destroy
     set tx
-} {{0 root} {1 head} {2 title} {3 PCDATA} {1 body} {2 h2} {3 PCDATA} {3 p} {4 PCDATA} {3 p} {4 form} {5 input}}
+} [list \
+	{0 root} {1 head} {2 title} {3 PCDATA} \
+	{1 body} {2 h2} {3 PCDATA} \
+	{2 p} {3 PCDATA} \
+	{2 p} {3 form} {4 input}]
 
 test htmlparse-${impl}-5.2 {conversion to tree} {
     struct::tree t
@@ -38,4 +47,7 @@ test htmlparse-${impl}-5.2 {conversion to tree} {
     }
     t destroy
     set tx
-} {{0 root} {1 head} {2 title} {3 PCDATA} {1 body} {2 h2} {3 PCDATA} {3 p} {4 PCDATA} {3 p}}
+} [list \
+	{0 root} {1 head} {2 title} {3 PCDATA} \
+	{1 body} {2 h2} {3 PCDATA} \
+	{2 p} {3 PCDATA} {2 p}]
